# Solana_Loto_Rust

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  DECISIONS.md  Makefile  README.md  TODO.txt  docker-compose.yml  tsconfig.json
.cargo/: config.toml
app/: next.config.ts  package-lock.json  package.json
app-reference/src/: styles.css
app-reference/src/assets/: backpack-icon.jpeg.asset.json  candy.png.asset.json  chest-frame-1.png.asset.json  chest-frame-2.png.asset.json  chest-frame-3.png.asset.json  chest-frame-4.png.asset.json  chest-frame-5.png.asset.json  chest-frame-6.png.asset.json  chest-frame-7.png.asset.json  chest-frame-8.png.asset.json  chest-frame-9.png.asset.json  chest-wallpaper.png.asset.json  cloud-cute.png.asset.json  coton-candy-2.png.asset.json  cotton-candy.png.asset.json  cute-cloud.png.asset.json  jupiter-icon.png.asset.json  lollipop.png.asset.json  mysterious-chest-purple.png.asset.json  orange-candy.png.asset.json  phantom-icon.png.asset.json  purple-chest.png.asset.json  raydium-icon.jpg.asset.json  solana-coin-3d.png.asset.json  solana-coin-dark.png.asset.json  solana-coin-left.png.asset.json  solana-coin-right.png.asset.json  solana-coin.png.asset.json  solana-color.jpg.asset.json  solana-logo-v2.png.asset.json  solana-logo.svg.asset.json  solflare-icon.svg.asset.json  superteam-footer.svg.asset.json  superteam-icon.avif.asset.json  treasure-chest.jpg.asset.json  treasure-hero-v2.png.asset.json
backend/: Cargo.toml
backend/migrations/: 20240117000001_initial_schema.sql  20260623000001_indexer_state.sql
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/dto/: lottery.rs  mod.rs  response.rs  ticket.rs  user.rs
backend/src/api/handlers/: lottery.rs  user.rs
backend/src/db/: mod.rs  pool.rs
backend/src/db/repositories/: indexer_state.rs  lottery.rs  mod.rs  tests.rs  ticket.rs  transaction.rs  user.rs
backend/src/indexer/: dispatch.rs  events.rs  mod.rs
backend/src/models/: indexer_state.rs  lottery.rs  mod.rs  ticket.rs  transaction.rs  user.rs
backend/src/utils/: error.rs
migrations/: deploy.ts
programs/lottery/: Cargo.toml
programs/lottery/src/: lib.rs
scripts/: seed-devnet-multi.ts  seed-devnet.ts  smoke-devnet.ts
tests/: lottery.ts
(+16 files in other folders)
