[package]
name = "lottery-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { workspace = true }

# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Database
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "macros"
] }

# Solana
solana-client = "2"
solana-sdk = "2"

# Security
jsonwebtoken = "9"
argon2 = "0.5"
bs58 = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
dotenv = "0.15"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
