[package]
name = "lottery"
version = "0.1.0"
description = "Decentralized on-chain lottery (devnet MVP) — Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.31.1"

# This crate is EXCLUDED from the root workspace (see root Cargo.toml: exclude = ["programs"]).
# It is therefore its own implicit workspace root: the release profile is defined here, not at
# the root. `overflow-checks = true` is NON-NEGOTIABLE on-chain: it turns an arithmetic overflow
# into a controlled panic instead of a silent wrap (safety net aligned with rule D37 — never
# perform raw arithmetic on lamports).
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
